# RPCN

./: .gitignore  README.md  bag_imu.ipynb  integratefunc.py  main.ipynb  main.py  new_main.ipynb  pyproject.toml  requirements.txt  testfile.json
Part_A/: .gitignore  main.ipynb  position-to-global.ipynb  pyproject.toml  rotate_velocity.ipynb
Part_A/data/_202211301115.18/: imu-acceleration.csv  imu-angular_velocity.csv
Part_A/data/_202211301118.14/: imu-acceleration.csv  imu-angular_velocity.csv
Part_A/data/_202211301120.51/: imu-acceleration.csv  imu-angular_velocity.csv
Part_A/data/run1/: imu-acceleration.csv
Part_B/: .README.swp  Dockerfile  README
Part_B/code/: trajectory_plot.py  trajectory_plot_total.py
Part_C/: PointCloud.py  pointcloud.ipynb
data/run1/: imu-angular_velocity.csv
data/test2/: imu-acceleration.csv  imu-angular_velocity.csv
data/test3/: imu-acceleration.csv  imu-angular_velocity.csv
